# ai_analysis_engine

./: .gitignore  README.md  check_db.py  debug_db.py  log.md  log_backup.md  pyproject.toml  run_output.txt  仕様差分.md  仕様書_サンプル_byGrok.md
.cursor/commands/: create_commit_message.md
.serena/: project.yml
.serena/memories/: code_style.md  codebase_structure.md  entrypoint_commands.md  guidelines.md  project_purpose.md  suggested_commands.md  task_completion_commands.md  tech_stack.md  testing_formatting_linting.md  util_commands.md
_input/: AI分析エンジン設計書.md  個別データ分析レポートサンプル.md  個別課題分析の改善点一覧.md  個別課題分析の改善点一覧_0930.md
_input/AI分析エンジン/: 個別データ分析エージェント仕様.md  全体性能差分分析エージェント仕様.md  制御・最終レポートエージェント仕様.md
_input/個別データ分析エンジン/: __init__.py  library_api.py
_input/個別データ分析エンジン/agents/: __init__.py  data_checker_agent.py  reporter_agent.py  supervisor_agent.py
_input/個別データ分析エンジン/config/: library_config.py
_input/個別データ分析エンジン/core/: __init__.py
_input/個別データ分析エンジン/models/: result.py
_input/個別データ分析エンジン/tools/: __init__.py  rag_tool.py  (+1 more)
config/: default_config.yaml
docs/: detailed_design_spec.md  quick-start-runner-setup.md
docs/docs_instant_analyzer/: detailed_design.md  library_specification.md  library_usage.md  library_usage_new.md  system_design.md
outputs/analysis_report_20250905_142436/: summary.md
outputs/analysis_report_20250905_142812/: summary.md
outputs/analysis_report_20250905_143129/: summary.md
outputs/data/: analysis_summary.json  improvement_suggestions.json  performance_metrics.json
outputs/reports/: analysis_report_20250902_134219.md  analysis_report_20250902_134358.md  analysis_report_20250902_140429.md  analysis_report_20250902_141345.md  analysis_report_20250902_141900.md  analysis_report_20250902_142053.md  analysis_report_20250904_142105.md  analysis_report_20250904_143513.md  analysis_report_20250904_143552.md  analysis_report_20250904_144308.md  analysis_report_20250904_144829.md  analysis_report_20250904_145103.md
scripts/: check_evaluation_outputs.py  list_targets.py  run_analysis.py  smoke_test.py
src/: __init__.py
src/ai_analysis_engine/: __init__.py
src/ai_analysis_engine/instance_analyzer/: README.md  __init__.py  example.py  exceptions.py  instance_analyzer.py  library_api.py  main.py  pyproject.toml
src/ai_analysis_engine/instance_analyzer/agents/: agent_tools.py  consistency_checker_agent.py  data_checker_agent.py  hypothesis_generator_agent.py  reporter_agent.py  reporting_mixins.py  verifier_agent.py
src/ai_analysis_engine/instance_analyzer/config/: __init__.py  config.py
src/ai_analysis_engine/instance_analyzer/core/: graph.py  nodes.py
src/ai_analysis_engine/instance_analyzer/models/: __init__.py  result.py  state.py  types.py
src/ai_analysis_engine/instance_analyzer/tools/: rag_tool.py  repl_tool.py
src/ai_analysis_engine/instance_analyzer/utils/: __init__.py  context_recorder.py  exploration_utils.py  file_utils.py  logger.py  text_utils.py
templates/: email_template.html.j2  instance_report_template.md.j2  report_template.md.j2
(+109 files in other folders)
