[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-analysis-engine"
version = "0.1.0"
description = "AI analysis engine for drowsy detection algorithm evaluation"
authors = [
    {name = "AI Analysis Team"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "scikit-learn>=1.3.0",
    "plotly>=5.18.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",
    "langgraph>=0.2.0",
    "faiss-cpu>=1.7.4",
    "datawarehouse",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0"
]
llm = [
    "mistralai>=0.0.12",
    "anthropic>=0.25.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/ai_analysis_engine"]

[project.scripts]
ai-analysis = "ai_analysis_engine.scripts.run_analysis:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0"
]

[tool.uv.sources]
datawarehouse = { git = "https://github.com/abekoki/DataWareHouse" }
